# vpn-2

./: .gitignore  CHANGES.txt  DEPLOYMENT.md  MIGRATION_GUIDE.md  README.md  README_3x_ui_deploy.md  README_XRAY_3XUI.md  amnezia-wg.service  docker-compose.prod.yml  docker-compose.yml  nginx.prod.conf  nginx.xray.conf  pyproject.toml  requirements.txt  start.sh  test_local_generator.py
.github/workflows/: ci.yml
app/: amnezia_ssh.py  billing.py  config.py  generator_client.py  keyboards.py  local_generator.py  main.py  main_new.py  states.py  three_x_ui.py  xray_api.py
backend/: Dockerfile  auth.py  crud.py  database.py  main.py  miniapp.py  models.py  requirements.txt  schemas.py
systemd/: amnezia-backend.service
xray/: config.json
