[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xray-vpn-service"
version = "2.0.0"
description = "Xray VPN service with 3x-ui admin panel and Telegram bot"
readme = "README_XRAY_3XUI.md"
requires-python = ">=3.11"
authors = [
    {name = "VPN Team", email = "admin@example.com"}
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.20",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.8.2",
    "python-dotenv>=1.0.0",
    "pydantic>=2.4.2",
    "prometheus-client>=0.16.0",
    "aiogram>=3.4.1,<4",
    "aiohttp>=3.9,<4",
    "PyNaCl>=1.5",
    "qrcode[pil]>=7.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.scripts]
xray-bot = "app.main:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*", "backend*"]
